# myocardial-strain-quantification

./: .env.example  .gitignore  Dockerfile  PLAN.md  README.md  STRATEGY.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt
agents/: phase1_data_pipeline.md  phase2_segmentation.md  phase4_strain_computation.md  phase5_risk_stratification.md  phase6_api_deployment.md
app/: config.py  main.py  schemas.py  services.py
app/routes/: analysis.py  health.py
configs/: data.yaml
demo/: __init__.py  memory_demo.py  swe_demo.py  tool_creation_demo.py  topology_demo.py
hft_system/: __init__.py  backtester.py  config.py  engine.py  execution.py  market_data.py  models.py  order_book.py  portfolio.py  risk_manager.py
hft_system/strategies/: __init__.py  base.py  market_making.py  mean_reversion.py  momentum.py  stat_arb.py
opensage/: __init__.py  cli.py  config.py  project.py
opensage/core/: __init__.py  agent.py  engine.py
opensage/llm/: __init__.py  base.py  claude.py
opensage/memory/: __init__.py  graph.py  hierarchical.py  memory_agent.py
opensage/tools/: __init__.py  base.py  executor.py  manager.py
scripts/: generate_synthetic_acdc.py
strain/: __init__.py
strategy-repo/: README.md  STRATEGY.md
tests/: __init__.py  test_agent.py  test_api.py  test_backtester.py  test_data_pipeline.py  test_engine.py  test_execution.py  test_market_data.py  test_memory.py  test_models.py  test_motion.py  test_order_book.py  test_portfolio.py  test_risk.py  test_risk_manager.py  test_segmentation.py  test_strain_computation.py  test_strategies.py  test_tools.py
(+31 files in other folders)
